Adjust release profile name

--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
     </dependencies>
     <profiles>
         <profile>
-            <id>release-sign-artifacts</id>
+            <id>release</id>
             <activation>
                 <property>
                     <name>performRelease</name>
